--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -9,4 +9,8 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                 python-version: 3.12
+            - name: Install deps
+              run: |
+                pip install -U pip
+                pip install .[tests]
             - uses: jpetrucciani/mypy-check@0.991
