--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -13,4 +13,5 @@ jobs:
               run: |
                 pip install -U pip
                 pip install .[tests]
+                python3 -m pip install types-requests
             - uses: jpetrucciani/mypy-check@0.991
