--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,4 @@ jobs:
                 pip install .[tests]
             - name: Run pytest
               run: |
-                pytest --cov=tokensrv --cov-report=term-missing
+                pytest --cov=tokensrv --cov-report=term-missing -v
