--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
             - name: clone mock server
               uses: actions/checkout@master
               with:
-                repository: ptobiasdiaz/adi_auth_srv
+                repository: IgnaRoz/adi_auth_srv
                 path: adi_auth_srv
             - name: Run mock server
               run: |
