--- a/.github/workflows/testsIntegracion.yml
+++ b/.github/workflows/testsIntegracion.yml
@@ -27,4 +27,4 @@ jobs:
                 cd ..
             - name: Run pytest
               run: |
-                pytest --cov=tokensrv --cov-report=term-missing -v tests/test_integracionpy
+                pytest --cov=tokensrv --cov-report=term-missing -v tests/test_integracion.py
