variable de entorno

--- a/.github/workflows/testsIntegracion.yml
+++ b/.github/workflows/testsIntegracion.yml
@@ -20,6 +20,7 @@ jobs:
                 path: adi_auth_srv
             - name: Run mock server
               run: |
+                STORAGE_FOLDER = storage
                 cd adi_auth_srv
                 pip install .
                 python bootstrap.py
